--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -32,6 +32,31 @@ include::{snippets}/authentication/kakao-login/http-response.adoc[]
 include::{snippets}/authentication/kakao-login/response-fields.adoc[]
 
 = 판매 게시글
+
+== 정렬 옵션 조회
+==== Example Curl
+include::{snippets}/posts/read-sortItems/curl-request.adoc[]
+==== Example Request
+include::{snippets}/posts/read-sortItems/http-request.adoc[]
+==== Request Query Parameters
+include::{snippets}/posts/read-sortItems/query-parameters.adoc[]
+
+// TODO: #14 ENUM과 연동하여 자동 생성될 수 있는 방법 찾아보기
+|===
+| 코드 | 설명
+
+| `POST`
+| 게시글 조회 시 정렬 옵션 (대소문자 구분 x)
+| `OFFER`
+| 가격제안 조회 시 정렬 옵션 (대소문자 구분 x)
+
+|===
+
+==== Example Response
+include::{snippets}/posts/read-sortItems/http-response.adoc[]
+==== Response Fields
+include::{snippets}/posts/read-sortItems/response-fields.adoc[]
+
 == 판매 게시글 생성
 ==== Example Curl
 include::{snippets}/posts/create-post/curl-request.adoc[]
