--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -32,6 +32,15 @@ include::{snippets}/authentication/kakao-login/http-response.adoc[]
 include::{snippets}/authentication/kakao-login/response-fields.adoc[]
 
 = 판매 게시글
+==== Example Curl
+include::{snippets}/posts/read-category-items/curl-request.adoc[]
+==== Example Request
+include::{snippets}/posts/read-category-items/http-request.adoc[]
+==== Example Response
+include::{snippets}/posts/read-category-items/http-response.adoc[]
+==== Response Fields
+include::{snippets}/posts/read-category-items/response-fields.adoc[]
+
 
 == 정렬 옵션 조회
 ==== Example Curl
@@ -40,6 +49,9 @@ include::{snippets}/posts/read-sortItems/curl-request.adoc[]
 include::{snippets}/posts/read-sortItems/http-request.adoc[]
 ==== Request Query Parameters
 include::{snippets}/posts/read-sortItems/query-parameters.adoc[]
+
+== 카테고리 조회
+
 
 // TODO: #14 ENUM과 연동하여 자동 생성될 수 있는 방법 찾아보기
 |===
