--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,6 +9,7 @@ endif::[]
 :sectlinks:
 
 = 로그인
+
 == 카카오 로그인 페이지 URL 조회
 ==== Example Curl
 include::{snippets}/authentication/kakao-login-url/curl-request.adoc[]
@@ -32,6 +33,9 @@ include::{snippets}/authentication/kakao-login/http-response.adoc[]
 include::{snippets}/authentication/kakao-login/response-fields.adoc[]
 
 = 판매 게시글
+
+== 카테고리 조회
+
 ==== Example Curl
 include::{snippets}/posts/read-category-items/curl-request.adoc[]
 ==== Example Request
@@ -49,9 +53,6 @@ include::{snippets}/posts/read-sortItems/curl-request.adoc[]
 include::{snippets}/posts/read-sortItems/http-request.adoc[]
 ==== Request Query Parameters
 include::{snippets}/posts/read-sortItems/query-parameters.adoc[]
-
-== 카테고리 조회
-
 
 // TODO: #14 ENUM과 연동하여 자동 생성될 수 있는 방법 찾아보기
 |===
@@ -78,3 +79,15 @@ include::{snippets}/posts/create-post/http-request.adoc[]
 include::{snippets}/posts/create-post/request-fields.adoc[]
 ==== Example Response
 include::{snippets}/posts/create-post/http-response.adoc[]
+
+== 판매 게시글 목록 조회 (검색 페이지)
+==== Example Curl
+include::{snippets}/posts/get-posts/curl-request.adoc[]
+==== Example Request
+include::{snippets}/posts/get-posts/http-request.adoc[]
+==== Request Query Parameters
+include::{snippets}/posts/get-posts/query-parameters.adoc[]
+==== Example Response
+include::{snippets}/posts/get-posts/http-response.adoc[]
+==== Response Fields
+include::{snippets}/posts/get-posts/response-fields.adoc[]
