--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -101,3 +101,16 @@ include::{snippets}/posts/get-single-post/http-request.adoc[]
 include::{snippets}/posts/get-single-post/http-response.adoc[]
 ==== Response Fields
 include::{snippets}/posts/get-single-post/response-fields.adoc[]
+
+= 가격제안
+
+== 게시글에 대한 가격제안 목록 조회
+==== Example Curl
+include::{snippets}/offers/get-offers-by-post/curl-request.adoc[]
+==== Example Request
+include::{snippets}/offers/get-offers-by-post/http-request.adoc[]
+==== Example Response
+include::{snippets}/offers/get-offers-by-post/http-response.adoc[]
+==== Response Fields
+include::{snippets}/offers/get-offers-by-post/response-fields.adoc[]
+
