--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -104,6 +104,16 @@ include::{snippets}/posts/get-single-post/response-fields.adoc[]
 
 = 가격제안
 
+== 가격제안 생성
+==== Example Curl
+include::{snippets}/offers/create-offer/curl-request.adoc[]
+==== Example Request
+include::{snippets}/offers/create-offer/http-request.adoc[]
+==== Request Fields
+include::{snippets}/offers/create-offer/request-fields.adoc[]
+==== Example Response
+include::{snippets}/offers/create-offer/http-response.adoc[]
+
 == 게시글에 대한 가격제안 목록 조회
 ==== Example Curl
 include::{snippets}/offers/get-offers-by-post/curl-request.adoc[]
